feat: new guardrail design
